<!--
 * Copyright (C) 2017 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>

    <!-- Application -->
    <string name="app_name">AndroidOSample</string>

    <!-- Main Screen -->
    <string name="txt_main_go_to_notification_channel_text">Demo Notification Channels</string>
    <string name="txt_main_go_to_notification_channel_info">-Creating a notification channel\n-Creating a notification channel Group\n-Modify Notification badges</string>
    <string name="txt_main_go_to_pip_text">Demo Picture-inPicture Mode</string>
    <string name="txt_main_go_to_pip_info">PIP is a special type of multi-window mode mostly used for video playback. PIP mode is already available for Android TV; Android O makes the feature available on other Android devices.</string>
    <string name="txt_main_go_to_autofill_text">Demo Autofill Framework</string>
    <string name="txt_main_go_to_autofill_info">Android O makes filling out forms, such as login and credit card forms, easier with the introduction of the Autofill Framework. Existing and new apps work with Autofill Framework after the user opts in to autofill.</string>
    <string name="txt_main_go_to_downloadable_font_text">Demo Downloadable Fonts</string>
    <string name="txt_main_go_to_downloadable_font_info">Using Downloadable Fonts via Android Studio and Google Play services.</string>
    <string name="txt_main_go_to_autosizing_textview_text">Demo Autosizing TextView</string>
    <string name="txt_main_go_to_autosizing_textview_info">You can control:\n-None resizing\n-Resizing Default\n-Resizing Granularity\n-Resizing Preset Sizes</string>

    <!-- Autosizing TextView Screen -->
    <string name="txt_autosizing_textview_none">This is the normal text, nothing happen with the size of this, you can try.</string>
    <string name="txt_autosizing_textview_autosize_default">This is the sizing text, but every sizing thing is default, you can try.</string>
    <string name="txt_autosizing_textview_autosize_granularity">This is the sizing text, but using some specifies and granularity to control the step, you can try.</string>
    <string name="txt_autosizing_textview_autosize_preset_size">This is the sizing text, but using a XML file to declare each step of sizing, you can try.</string>

    <!-- App Shortcut -->
    <string name="txt_app_shortcut_go_web_short">Visit my web</string>
    <string name="txt_app_shortcut_go_web_long">Click here to go to Yellow Code Books website</string>

    <string name="txt_do_not_support_android_version">Sorry, this version of Android do not support this function</string>
</resources>
